# faceoff

./: .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  CONFIG_README.md  IMPROVEMENTS.md  LICENSE  NOTICE  PROJECT_INTENT.md  README.md  config.json  config.py  config.yaml  enhancement_utils.py  environment.yml  faceoff.py  faceoff_gif.py  faceoff_unified.py  faceoff_video.py  inswapper_128.onnx  logging_utils.py  main.py  media_processing.py  media_utils.py  pyproject.toml  pytest.ini  requirements.txt  test_realesrgan.py
.eggs/Cython-0.29.35-py3.8-linux-x86_64.egg/EGG-INFO/: RECORD
.opencode/goals/: state.json  state.json.ledger.jsonl
basicsr/: version.py
basicsr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
buffalo_l/: w600k_r50.onnx
core/: __init__.py  face_paste.py  face_paste_gpu.py  face_processor.py  gpu_detection.py  gpu_frame.py  gpu_manager.py  gpu_realesrgan.py  media_processor.py  model_pool.py
presets/: Anime Style.json  Balanced.json  Default.json  Fast Preview.json  High Quality.json
processing/: __init__.py  async_pipeline.py  codeformer_restoration.py  enhancement.py  facade.py  face_restoration.py  frame_batch.py  gif_processing.py  gpu_scheduler.py  hat_enhancement.py  image_processing.py  in_memory_enhancement.py  model_optimizer.py  model_preloader.py  orchestrator.py  resolution_adaptive.py  restoration_session.py  streaming_media.py  swinir_enhancement.py  video_processing.py  workload_profile.py
processing/hat_models/: __init__.py  arches.py  hat_arch.py
processing/hat_models/modules/: __init__.py
scripts/: PROGRESS_TRACKING.md  cleanup_tensorrt_cache.ps1  demo_config.py  demo_progress.py  demo_terminal.py  test_onnx_gpu.py  verify_gpu_stack.py
tests/: README.md  __init__.py  conftest.py  onnx_gpu_test.py
tests/integration/: __init__.py  test_gif_processing_e2e.py  test_gpu_stack.py  test_hat_enhancement_e2e.py  test_image_processing_e2e.py  test_video_processing_e2e.py
tests/unit/: __init__.py  test_async_pipeline.py  test_compression.py  test_config_manager.py  test_enhancement_models.py  test_error_handler.py  test_error_handler_gpu.py  test_face_paste_gpu.py  test_face_processor.py  test_gpu_decode.py  test_gpu_detection.py  test_gpu_frame.py  test_in_memory_enhancement.py  test_logging_setup.py  test_media_processor.py  test_memory_manager.py  test_model_pool.py  test_model_preloader.py  test_onnx_providers.py  test_output_metadata.py  test_pinned_pool.py  test_streaming_pipeline.py  test_terminal_tab.py  test_validation.py  test_workload_profile.py
ui/: __init__.py  app.py  app.py.backup  faceoff_theme.py
ui/components/: __init__.py  gallery_tab.py  gif_tab.py  image_tab.py  tab_factory.py  terminal_tab.py  video_tab.py
ui/handlers/: __init__.py  preset_handlers.py  processing_handlers.py
ui/helpers/: __init__.py  face_detection.py  face_mapping.py  gallery_utils.py  gpu_utils.py  preview.py
utils/: __init__.py  cleanup_manager.py  compression.py  config_manager.py  config_schema.py  constants.py  error_handler.py  gpu_decode.py  json_formatter.py  logging_setup.py  lru_cache.py  memory_manager.py  model_cache.py  model_optimizer.py  onnx_providers.py  output_metadata.py  pinned_pool.py  preset_manager.py  profiling.py  progress.py  temp_manager.py  tensorrt_utils.py  validation.py  video_io.py  video_io.pyi
weights/: RealESRGAN_x4plus.pth
weights/CodeFormer/: codeformer.pth
weights/facelib/: parsing_parsenet.pth
weights/realesrgan/: RealESRGAN_x2plus.pth
