[project]
name = "faceoff"
version = "2.11.0"
description = "Local GPU-accelerated face swapping application"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Deep Learning & GPU
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "onnxruntime-gpu>=1.23.0",
    "onnx>=1.19.0",
    "onnxoptimizer>=0.3.13",

    # Face detection / swapping
    "insightface>=0.7.3",

    # CV / image processing
    "opencv-python>=4.10.0,<4.11.0",
    "numpy>=1.26,<2.0",
    "Pillow>=10.0.0,<12.0",
    "albumentations>=2.0.8",
    "scikit-image>=0.22.0",

    "imageio>=2.33.0,<2.35.0",
    "imageio-ffmpeg>=0.6.0",
    "ffmpeg-python>=0.2.0",

    # Enhancement models
    "realesrgan>=0.3.0",
    "gfpgan>=1.3.8",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    "transformers>=4.36.0",
    "codeformer-pip>=0.0.4",

    # Performance / GPU acceleration
    # ORT 1.22+ TensorRT EP links against libnvinfer.so.10 — TRT 11 is incompatible
    "tensorrt>=10.9,<11",
    "nvidia-cublas-cu12>=12.0.0",
    "nvidia-cudnn-cu12>=9.20.0,<9.21.0",
    "nvidia-cufft-cu12>=11.0.0",
    "nvidia-cusparse-cu12>=12.0.0",
    "nvidia-cusolver-cu12>=11.0.0",
    "nvidia-curand-cu12>=10.0.0",

    # UI / web server
    "gradio>=5.49.0",
    "uvicorn>=0.38.0",
    "fastapi>=0.121.0",

    # Core utilities
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
    "gdown>=5.0.0",
    "lpips>=0.1.4",
    "python-magic>=0.4.14",
    "decorator>=4.4.2",

    # Test tooling (always installed)
    "pytest>=8.0,!=8.4.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "processing", "ui", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, isolated, no GPU required)",
    "integration: Integration tests (may require GPU or external resources)",
    "slow: Slow tests (processing large files)",
    "gpu: Tests that require CUDA GPU",
    "skip_ci: Tests to skip in CI environment",
]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["core", "processing", "utils", "ui"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "main.py",
]
branch = true

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pass",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
